# HYAudioDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hyman/audiodemon/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_audio.h  navite_audio.c  opensl.c  opensl.h  wav.c  wav.h
app/src/main/java/com/hyman/audiodemo/: MainActivity.java  NativeAudio.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/hyman/audiodemon/: ExampleUnitTest.java
